# keel

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP-NEXT.md  ROADMAP.md  SPEC.md  VISION.md  install.sh  uninstall.sh
.claude/skills/design-lang/: SKILL.md
.github/workflows/: docs.yml  release.yml
brand/: BRAND.md  README.md  keel-docs.css  keel-tokens.css
brand/ascii/: keel-coin.txt  keel-compact.txt  keel-mini.txt  keel-oneline.txt  keel-tall.txt
docs/: book.toml
docs/src/: SUMMARY.md  changelog.md  introduction.md
docs/src/cli/: build.md  check.md  (+4 more)
docs/theme/: highlight.js  keel-docs.css  keel-highlight.js  keel.css
editors/vscode/: language-configuration.json  package.json
examples/: README.md  at_demo.keel  code_reviewer.keel  comparison_python_vs_keel.md  customer_support.keel  daily_digest.keel  data_pipeline.keel  email_agent.keel  hello_world.keel  http_demo.keel  meeting_prep.keel  minimal.keel  multi_agent_inbox.keel  rich_enum.keel  self_message.keel  test_ollama.keel  test_scheduling.keel
examples/inbox_assistant/: .env.example  README.md  inbox_assistant.keel
homebrew/: keel.rb
src/: ast.rs  formatter.rs  lexer.rs  lib.rs  lsp.rs  main.rs  parser.rs  repl.rs
src/interpreter/: environment.rs  mod.rs  value.rs
src/runtime/: email.rs  human.rs  llm.rs  mod.rs
src/types/: checker.rs  mod.rs
src/vm/: bytecode.rs  compiler.rs  machine.rs  mod.rs
tests/: formatter_tests.rs  integration_tests.rs  interpreter_tests.rs  lexer_tests.rs  lsp_tests.rs  parser_tests.rs  runtime_config_tests.rs  type_checker_tests.rs
(+21 files in other folders)
